# ai-analyser

./: LICENSE  pyproject.toml
src/: models.py
