[project]
name = "ai-analyser"
version = "0.1.0"
description = ""
authors = [
    {name = "HureddyGo",email = "96876146+LeuwHugo@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.12.5,<3.0.0)",
    "mypy (>=1.9)",
    "jupyter (>=1.1.1,<2.0.0)"
]

[tool.poetry]
packages = [{include = "ai_analyser", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
